--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "short_name": "PayTmp",
     "name": "Payment Temporally",
-    "start_url": "./index.html",
+    "start_url": "/index.html",
     "display": "standalone",
     "icons": [{
       "src": "images/icon.png",
