--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "short_name": "PayTmp",
     "name": "Payment Temporally",
-    "start_url": "/paytemp/index.html",
+    "start_url": "https://m2932.github.io/paytemp/index.html",
     "display": "standalone",
     "icons": [{
       "src": "images/icon128.png",
